# bouncer

./: .gitignore  README.md  download_hosts.sh  generate_hosts.py  hosts_base  hosts_whitelist  pyproject.toml  update-hosts.command
settings/: hosts_base  hphosts.ad_servers.hosts  to_block.domains  whitelist.domains
to_block/: misc.domains
